XDEVSERVER-212 - Move to Hibernate ORM 6.x
- Moved to Hibernate ORM 6.4.4
- Removed hibernate-jpamodelgen